--- a/public/font.css
+++ b/public/font.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=B612&display=swap');
 *{
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    color: #444444;
-    font-size: 9pt;
-    background-color: #FAFAFA;
+    font-family: 'B612', sans-serif;    
+    color: #495057;
     letter-spacing: 0.5px;
+}
+.ui.pointing.red.basic.label{
+    color: red;
+    font-size: 8pt;
 }
